Fix spilling over viewport on width-constrained (mobile) devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,8 +58,7 @@ h3:last-of-type {
 }
 
 input, .sponsor-btn {
-	width: 15em;
-	max-width: 100%;
+	width: 100%;
 	display: block;
 	margin: .2em auto;
 	background-color: RGBA(0,0,0,.5);
